<resources>
    <string name="app_name">Login Linear Layout</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_there_nice_to_see_you_again">Hi there! Nice to see you again.</string>
    <string name="your_email_address">Your email address</string>
    <string name="email">Email</string>
    <string name="your_password">Your password</string>
    <string name="password">Password</string>
    <string name="btn_sign_inb">Sign in</string>
    <string name="or_use_one_of_your_social_profiles">or use one of your social profiles</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
</resources>